--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 title: Big Canoe Deals
 email: info@bigcanoedeals.com
-description: Great deals for Big Canoe and Marble Hill, GA
+description: Great deals around Big Canoe and Marble Hill, GA
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
