--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,9 @@ autoprefixer:
     - last 4 versions
 #    - Safari > 2
 
+sass:
+  sass_dir: ./_sass
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
