Added responsive classes to ad stack cards

--- a/_data/list.yml
+++ b/_data/list.yml
@@ -52,7 +52,7 @@
   deal: 5% off with purchase of $50 or more.
   link: https://luckyhare.com/
   height: tall
-  width: 12
+  width: full
 
 - name: Jasper Drug
   image: jasper-drug.png
